# internal/model/converter/order_converter.go
@@ -8,32 +8,27 @@ import (
 
 func OrderToResponse(order *entity.Order) *model.OrderResponse {
 	return &model.OrderResponse{
-		ID:                 order.ID,
-		Invoice:            order.Invoice,
-		ProductId:          order.ProductId,
-		ProductName:        order.ProductName,
-		ProductDescription: order.ProductDescription,
-		Price:              fmt.Sprintf("%.2f", order.Price),
-		Quantity:           order.Quantity,
-		Amount:             fmt.Sprintf("%.2f", order.Amount),
-		DiscountType:       order.DiscountType,
-		DiscountValue:      order.DiscountValue,
-		UserId:             order.UserId,
-		FirstName:          order.FirstName,
-		LastName:           order.LastName,
-		Email:              order.Email,
-		Phone:              order.Phone,
-		PaymentMethod:      order.PaymentMethod,
-		PaymentStatus:      order.PaymentStatus,
-		DeliveryStatus:     order.DeliveryStatus,
-		IsDelivery:         order.IsDelivery,
-		DeliveryCost:       fmt.Sprintf("%.2f", order.DeliveryCost),
-		CategoryName:       order.CategoryName,
-		CompleteAddress:    order.CompleteAddress,
-		GoogleMapLink:      order.GoogleMapLink,
-		Distance:           order.Distance,
-		CreatedAt:          order.Created_At.Format("2006-01-02 15:04:05"),
-		UpdatedAt:          order.Updated_At.Format("2006-01-02 15:04:05"),
+		ID:              order.ID,
+		Invoice:         order.Invoice,
+		Amount:          fmt.Sprintf("%.2f", order.Amount),
+		DiscountType:    order.DiscountType,
+		DiscountValue:   order.DiscountValue,
+		UserId:          order.UserId,
+		FirstName:       order.FirstName,
+		LastName:        order.LastName,
+		Email:           order.Email,
+		Phone:           order.Phone,
+		PaymentMethod:   order.PaymentMethod,
+		PaymentStatus:   order.PaymentStatus,
+		DeliveryStatus:  order.DeliveryStatus,
+		IsDelivery:      order.IsDelivery,
+		DeliveryCost:    fmt.Sprintf("%.2f", order.DeliveryCost),
+		CompleteAddress: order.CompleteAddress,
+		GoogleMapLink:   order.GoogleMapLink,
+		Distance:        order.Distance,
+		OrderProducts:   *OrderProductsToResponse(&order.OrderProducts),
+		CreatedAt:       order.Created_At.Format("2006-01-02 15:04:05"),
+		UpdatedAt:       order.Updated_At.Format("2006-01-02 15:04:05"),
 	}
 }
 
